Able to draw RPM to middle of OLED

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -44,6 +44,7 @@ Core/Src/led.c \
 Core/Src/stm32g4xx_it.c \
 Core/Src/stm32g4xx_hal_msp.c \
 Core/Src/ssd1306.c \
+Core/Src/ssd1306_fonts.c \
 Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_fdcan.c \
 Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal.c \
 Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc.c \
