Configured PWM and DMA, added LED control files, LED works! Need to do cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "gpio.h": "c",
-        "fdcan.h": "c"
+        "fdcan.h": "c",
+        "stm32g4xx_hal.h": "c"
     }
 }
