More restructuring, cleaned up main function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "gpio.h": "c",
         "fdcan.h": "c",
-        "stm32g4xx_hal.h": "c"
+        "stm32g4xx_hal.h": "c",
+        "stdio.h": "c",
+        "tim.h": "c"
     }
 }
